Bug 216110 - Krita crashes on opening jpeg file with a grayscale profile not suited for input
Summary: Krita crashes on opening jpeg file with a grayscale profile not suited for input
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Cyrille Berger
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-25 16:45 UTC by Cyrille Berger
Modified: 2010-02-27 09:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cyrille Berger 2009-11-25 16:45:22 UTC
Opening the following file crashes krita:

http://static.pcinpact.com/images/bd/news/56965-oeil-yeux-regard.jpg

krita(29103)/krita (file handling) KisJPEGImport::convert: Importing using JPEGImport!
krita(29103)/krita (file handling) <unnamed>::getColorSpaceForColorType: color_type = 1
krita(29103)/krita (file handling) KisJPEGConverter::decode: the profile is not suitable for output and therefore cannot be used in krita, we need to convert the image to a standard profile                                                                                 
krita(29103) KSColorSpacesPlugin::KSColorSpacesPlugin: >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>                                                                                 
lcms: Error #12288; Output profile is operating on wrong colorspace                       
lcms: Error #12288; Input profile is operating on wrong colorspace
Comment 1 Cyrille Berger 2009-11-25 16:45:45 UTC
using convert to png and tiff also show the problem.
Comment 2 Halla Rempt 2009-12-11 13:32:39 UTC
Application: Krita (krita), signal: Segmentation fault
[KCrash Handler]
#5  KoColorConversionSystem::findBestPath (this=0x9d9300, srcNode=0x0, dstNode=0xa891e0) at /home/boud/kde/src/svn/branch/koffice_21/libs/pigment/KoColorConversionSystem.cpp:574
#6  0x00007f1f4ea353a2 in KoColorConversionSystem::createColorConverter (this=0x9d9300, srcColorSpace=0xa81d60, dstColorSpace=0xa7f390, renderingIntent=IntentPerceptual)
    at /home/boud/kde/src/svn/branch/koffice_21/libs/pigment/KoColorConversionSystem.cpp:274
#7  0x00007f1f347a780c in KisJPEGConverter::decode (this=0x7fff669fc8e0, uri=<value optimized out>) at /home/boud/kde/src/svn/branch/koffice_21/krita/plugins/formats/jpeg/kis_jpeg_converter.cc:201
#8  0x00007f1f347a9157 in KisJPEGConverter::buildImage (this=0x7fff669fc8e0, uri=<value optimized out>)
    at /home/boud/kde/src/svn/branch/koffice_21/krita/plugins/formats/jpeg/kis_jpeg_converter.cc:426
#9  0x00007f1f347a4b54 in KisJPEGImport::convert (this=<value optimized out>, to=<value optimized out>) at /home/boud/kde/src/svn/branch/koffice_21/krita/plugins/formats/jpeg/kis_jpeg_import.cc:79
#10 0x00007f1f51348842 in KOfficeFilter::ChainLink::invokeFilter (this=0xa2b700, parentChainLink=0x0) at /home/boud/kde/src/svn/branch/koffice_21/libs/main/KoFilterChainLink.cpp:69
#11 0x00007f1f5133f87b in KoFilterChain::invokeChain (this=0xa2a8a0) at /home/boud/kde/src/svn/branch/koffice_21/libs/main/KoFilterChain.cpp:94
#12 0x00007f1f5133d988 in KoFilterManager::importDocument (this=0xa4ef20, url=<value optimized out>, status=<value optimized out>)
    at /home/boud/kde/src/svn/branch/koffice_21/libs/main/KoFilterManager.cpp:163
#13 0x00007f1f512f32a1 in KoDocument::openFile (this=0x9a5340) at /home/boud/kde/src/svn/branch/koffice_21/libs/main/KoDocument.cpp:1208
#14 0x00007f1f4d1d09e7 in KParts::ReadOnlyPart::openUrl(KUrl const&) () from /usr/lib64/libkparts.so.4
#15 0x00007f1f512f253c in KoDocument::openUrl (this=0x9a5340, _url=...) at /home/boud/kde/src/svn/branch/koffice_21/libs/main/KoDocument.cpp:1136
#16 0x00007f1f51313257 in KoMainWindow::openDocumentInternal (this=0x996e20, url=..., newdoc=0x9a5340) at /home/boud/kde/src/svn/branch/koffice_21/libs/main/KoMainWindow.cpp:670
#17 0x00007f1f51313e4a in KoMainWindow::openDocument (this=0x996e20, newdoc=0x9a5340, url=...) at /home/boud/kde/src/svn/branch/koffice_21/libs/main/KoMainWindow.cpp:653
#18 0x00007f1f512e1e2c in KoApplication::start (this=<value optimized out>) at /home/boud/kde/src/svn/branch/koffice_21/libs/main/KoApplication.cpp:216
#19 0x00007f1f52950a83 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at /home/boud/kde/src/svn/branch/koffice_21/krita/main.cc:46
#20 0x00007f1f4a0d1a7d in __libc_start_main () from /lib64/libc.so.6
#21 0x0000000000400949 in _start () at ../sysdeps/x86_64/elf/start.S:113
Comment 3 Cyrille Berger 2009-12-11 13:39:10 UTC
is that with the same file ?
Comment 4 Halla Rempt 2009-12-11 13:41:29 UTC
Yes. Though with 2.1 -- I'm trying to reproduce all bugs with 2.1 today.
Comment 5 Cyrille Berger 2010-02-27 09:15:42 UTC
SVN commit 1096638 by berger:

Fix: crash when opening a file with a profile that is not suited to use
with the color space of the file

BUG: 216110


 M  +11 -1     plugins/formats/jpeg/kis_jpeg_converter.cc  
 M  +9 -0      plugins/formats/tiff/kis_tiff_converter.cc  
 M  +9 -0      ui/kis_png_converter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1096638