Fix: crash when opening a file with a profile that is not suited to use with the color space of the file

BUG: 216110

svn path=/trunk/koffice/; revision=1096638