krita/plugins/formats/jpeg/kis_jpeg_converter.cc
@@ -67,6 +67,7 @@ extern "C" {
 
 #include <KoColorProfile.h>
 #include <KoColorModelStandardIds.h>
+#include <boost/concept_check.hpp>
 
 #define ICC_MARKER  (JPEG_APP0 + 2) /* JPEG marker code for ICC */
 #define ICC_OVERHEAD_LEN  14    /* size of non-profile data in APP2 */
@@ -177,13 +178,22 @@ KisImageBuilder_Result KisJPEGConverter::decode(const KUrl& uri)
         if (hProfile != (cmsHPROFILE) NULL) {
             profile = KoColorSpaceRegistry::instance()->createColorProfile(modelId, Integer8BitsColorDepthID.id(), profile_rawdata);
             Q_CHECK_PTR(profile);
-//             dbgFile <<"profile name:" << profile->productName() <<" profile description:" << profile->productDescription() <<" information sur le produit:" << profile->productInfo();
+            dbgFile <<"profile name:" << profile->name() <<" product information:" << profile->info();
             if (!profile->isSuitableForOutput()) {
                 dbgFile << "the profile is not suitable for output and therefore cannot be used in krita, we need to convert the image to a standard profile"; // TODO: in ko2 popup a selection menu to inform the user
             }
         }
     }
 
+    // Check that the profile is used by the color space
+    if (profile && !KoColorSpaceRegistry::instance()->colorSpaceFactory(
+        KoColorSpaceRegistry::instance()->colorSpaceId(
+      modelId, Integer8BitsColorDepthID.id()))->profileIsCompatible(profile)) {
+        warnFile << "The profile " << profile->name() << " is not compatible with the color space model " << modelId;
+        delete profile;
+        profile = 0;
+    }
+    
     // Retrieve a pointer to the colorspace
     const KoColorSpace* cs;
     if (profile && profile->isSuitableForOutput()) {
